<resources>

    <string name="login">登录</string>
    <string name="license">license</string>

    <string name="main_page_0">首页</string>
    <string name="main_page_1">发现</string>
    <string name="main_page_2">我的</string>

    <string name="draw_exit">退出登录</string>
    <string name="draw_about">关于</string>
    <string name="draw_more">更多</string>

    <string name="us_login">点击头像登录</string>

    <string name="login_user_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_title">登录</string>

    <string name="about_title">关于</string>
    <string name="about_source">源代码地址</string>
    <string name="about_reference">项目代码参考地址</string>

    <string name="more_title">更多组件</string>
    <string name="more_draw">签名板</string>
    <string name="more_particle">播放器特效</string>
    <string name="more_rx">rxJava实现</string>


    <string name="toast_null_name">用户名不能为空！</string>
    <string name="toast_null_pwd">密码不能为空！</string>
    <string name="title_activity_rx">RxActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
