<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@drawable/selector_main_tab_home"
        android:title="@string/main_page_0"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_yours"
        android:enabled="true"
        android:icon="@drawable/selector_main_tab_yours"
        android:title="@string/main_page_1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_us"
        android:enabled="true"
        android:icon="@drawable/selector_main_tab_us"
        android:title="@string/main_page_2"
        app:showAsAction="ifRoom" />

</menu>
