<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.more.MoreActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/icon_normal_back"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/more_title"
            app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/btn_draw"
                    style="@style/More_Tv"
                    android:text="@string/more_draw" />

            <View
                    style="@style/Line" />

            <TextView
                    android:id="@+id/btn_particle"
                    style="@style/More_Tv"
                    android:text="@string/more_particle" />

            <View
                    style="@style/Line" />

            <TextView
                    android:id="@+id/btn_rx"
                    style="@style/More_Tv"
                    android:text="@string/more_rx" />

            <View
                    style="@style/Line" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>