<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.us.UsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorSuccess">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_head"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:scaleType="centerCrop"
                app:civ_border_color="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/icon_normal_person" />

        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_head"
                tools:text="@tools:sample/first_names" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_40"
                    android:background="@color/colorDivider"/>

            <LinearLayout
                    android:id="@+id/btn_more"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_marginStart="@dimen/dp_16"
                        android:src="@drawable/icon_normal_settings" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:textSize="@dimen/sp_14"
                        android:text="@string/draw_more"
                        android:textColor="@color/colorText" />

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/colorDivider"/>

            <LinearLayout
                    android:id="@+id/btn_about"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_marginStart="@dimen/dp_16"
                        android:src="@drawable/icon_normal_settings" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:textSize="@dimen/sp_14"
                        android:text="@string/draw_about"
                        android:textColor="@color/colorText" />

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/colorDivider"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_50"
                    android:background="@color/colorDivider"/>

            <LinearLayout
                    android:id="@+id/btn_exit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:textSize="@dimen/sp_16"
                        android:text="@string/draw_exit"
                        android:textColor="@color/colorError" />

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/colorDivider"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>